# relp-num

./: .codecov.yml  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: main.yml
benches/: bench_main.rs
benches/criterion/: factors.rs  mod.rs
benches/criterion/rational_big/: add.rs
benches/criterion_benchmarks/: factors.rs  mod.rs  primes.rs
benches/criterion_benchmarks/rational_big/: add.rs
benches/iai/: mod.rs
benches/iai/rational_big/: add.rs
examples/: readme.rs
src/: binary.rs  io.rs  lib.rs  non_zero.rs  one.rs  sign.rs  signed_one.rs  zero.rs
src/integer/: mod.rs  sign.rs
src/integer/big/: creation.rs  io.rs  mod.rs  properties.rs
src/integer/big/ops/: building_blocks.rs  div.rs  mod.rs  non_zero.rs  normalize.rs
src/integer/big/ops/asm/: NOTICE
src/integer/factorization/: mod.rs  size_16.rs  size_32.rs  size_64.rs  size_8.rs  size_large.rs  test.rs
src/integer/factorization/prime/: mod.rs  primes.rs
src/non_zero/: mod.rs  sign.rs
src/rational/: factorization.rs  macro.rs  macros.rs  mod.rs  test.rs  utilities.rs
src/rational/big/: creation.rs  io.rs  mod.rs  properties.rs  special.rs  test.rs  with_binary.rs  with_integer.rs  with_one.rs  with_option.rs  with_small.rs  with_small_rational.rs  with_zero.rs
src/rational/big/ops/: add_sub.rs  building_blocks.rs  div.rs  mod.rs  mul_div.rs  normalize.rs  test.rs
src/rational/big/ops/building_blocks/: mod.rs
src/rational/big/with_integer/: mod.rs  small.rs
src/rational/factorization/: mod.rs
src/rational/small/: convert.rs  io.rs  mixing_signs.rs  mod.rs
src/rational/small/io/: fmt.rs  mod.rs  zero_one.rs
src/rational/small/ops/: building_block.rs  building_blocks.rs  mod.rs  test.rs  with_int.rs  with_one.rs  with_zero.rs
src/rational/small/ops/with_self/: building_block.rs  forwards.rs  mod.rs
src/sign/: mod.rs  non_negative_sign.rs  non_zero_sign.rs  sign.rs
src/traits/: factorization.rs  mod.rs  signed_unsigned.rs
