[package]
name = "relp-num"
version = "0.0.4"
authors = ["Bram van den Heuvel <bram@vandenheuvel.online>"]
edition = "2018"
description = "Number types for the relp crate"
repository = "https://github.com/vandenheuvel/relp-num"
license = "MIT"

keywords = ["relp", "exact", "precision", "number", "rational"]
categories = ["algorithms", "science"]

[dependencies]
num-traits = "0.2.14"
gcd = "2.0.1"
smallvec = { version = "1.6.1", features = ["const_generics", "specialization"] }

[dev-dependencies]
criterion = { version = "0.3", features = ['real_blackbox'] }

[build-dependencies]
cc = "1.0.68"

[[bench]]
name = "bench_main"
harness = false
