[package]
name = "relp-num"
version = "0.1.7"
authors = ["Bram van den Heuvel <bram@vandenheuvel.online>"]
edition = "2018"
description = "Number types for the relp crate"
repository = "https://github.com/vandenheuvel/relp-num"
license = "GPL-3.0-only"

keywords = ["relp", "exact", "precision", "number", "rational"]
categories = ["algorithms", "science"]

[dependencies]
num-traits = "0.2.14"
gcd = "2.0.1"
smallvec = { version = "1.6.1", features = ["const_generics", "specialization"] }
index-utils = "1.0.0"

[dev-dependencies]
criterion = { version = "0.3", features = ['real_blackbox'] }
iai = "0.1.1"

[build-dependencies]
cc = "1.0.68"

[[bench]]
name = "criterion"
harness = false
path = "benches/criterion/mod.rs"

[[bench]]
name = "iai"
harness = false
path = "benches/iai/mod.rs"
