[package]
name = "relp-num"
version = "0.1.12"
authors = ["Bram van den Heuvel <bram@vandenheuvel.online>"]
edition = "2021"
description = "Number types for the relp crate"
repository = "https://github.com/vandenheuvel/relp-num"
license = "GPL-3.0-only"

keywords = ["relp", "exact", "precision", "number", "rational"]
categories = ["algorithms", "science"]

[dependencies]
num-traits = "0.2.18"
gcd = "2.3.0"
smallvec = { version = "1.13.1", features = ["const_generics", "specialization"] }
index-utils = "2.2.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["real_blackbox"] }

[build-dependencies]
cc = "1.0.83"

[[bench]]
name = "criterion"
harness = false
path = "benches/criterion/mod.rs"
